added exported attribute for android 12 support.

--- a/dexter/src/main/AndroidManifest.xml
+++ b/dexter/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
   <application>
     <activity
         android:name=".DexterActivity"
+        android:exported="false"
         android:theme="@style/Dexter.Internal.Theme.Transparent"
         />
   </application>
